fixing alignment of message

--- a/slack-interview/main.scss
+++ b/slack-interview/main.scss
@@ -48,8 +48,6 @@ img {
     padding: 1.5em;
     position: absolute;
     right: 40px;
-    top: 50%;
-    transform: translateY(-50%);
     &:hover {
         background-color: #FAFAFA;
     }
